# daisykit-android

./: .gitignore  .gitmodules  README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/configs/: face_detector_config.json  pushup_counter_config.json
app/src/main/java/com/vnopenai/daisykit/: DaisykitCamera.java  MainActivity.java  SplashScreenActivity.java
app/src/main/jni/: CMakeLists.txt  asset_mgr_utils.cpp  asset_mgr_utils.h  daisykit_camera.cpp  daisykit_camera.h  demo_app_enum.h
app/src/main/res/drawable/: bg_gradient.xml  daisykit_app_logo.xml  daisykit_logo.xml  splash_background.xml  switch_cam_icon.xml
app/src/main/res/layout/: main.xml
app/src/main/res/values/: color.xml  strings.xml
